--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vapoursynth"]
 	path = vapoursynth
 	url = https://github.com/captainadamo/vapoursynth
+[submodule "libffi"]
+	path = libffi
+	url = https://github.com/atgreen/libffi.git
