--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libffi"]
 	path = libffi
 	url = https://github.com/atgreen/libffi.git
+[submodule "cpython"]
+	path = cpython
+	url = https://github.com/python/cpython.git
