--- a/.gitignore
+++ b/.gitignore
@@ -11,70 +11,20 @@ x.*xcbkptlist
 *.pbxuser
 *~
 .gdb_history
-Doc/build/
-Doc/tools/docutils/
-Doc/tools/jinja/
-Doc/tools/jinja2/
-Doc/tools/pygments/
-Doc/tools/sphinx/
-Lib/lib2to3/*.pickle
-Lib/test/data/*
-Lib/_sysconfigdata.py
-Lib/plat-mac/errors.rsrc.df.rsrc
-Makefile
-Makefile.pre
-Misc/python.pc
-Misc/python-config.sh
-Modules/Setup
-Modules/Setup.config
-Modules/Setup.local
-Modules/config.c
-Modules/ld_so_aix
-Modules/_freeze_importlib
-Modules/_testembed
-PCbuild/*.bsc
-PCbuild/*.dll
-PCbuild/*.exe
-PCbuild/*.exp
-PCbuild/*.lib
-PCbuild/*.ncb
-PCbuild/*.o
-PCbuild/*.pdb
-PCbuild/Win32-temp-*
-PCbuild/amd64/
-.purify
-Parser/pgen
-__pycache__
-autom4te.cache
-build/
-buildno
-config.cache
-config.log
-config.status
-config.status.lineno
-core
-db_home
-config.log
-config.status
-libpython*.a
-libpython*.so*
-platform
-pybuilddir.txt
-pyconfig.h
-python
-python-config
-python-config.py
-python.exe
-python-gdb.py
-python.exe-gdb.py
-reflog.txt
-.svn/
-tags
-TAGS
-.coverage
-coverage/
-externals/
-htmlcov/
 .DS_Store
 xcuserdata
 UserInterfaceState.xcuserstate
+build/
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
