--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/captainadamo/vapoursynth
 [submodule "libffi"]
 	path = libffi
-	url = https://github.com/atgreen/libffi.git
+	url = https://github.com/captainadamo/libffi.git
 [submodule "cpython"]
 	path = cpython
 	url = https://github.com/python/cpython.git
