--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 	path = cpython
 	url = https://github.com/python/cpython.git
 	branch = 3.4
+[submodule "libffi"]
+	path = libffi
+	url = https://github.com/captainadamo/libffi.git
+	branch = iOS
